# WindFolio

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
config/: config.yaml
notebooks/: 6minute_missing_ws_values_analysis.ipynb  data_explo_n1.ipynb  hourly_missing_ws_values_analysis.ipynb  hourly_missing_ws_values_analysis_6minute.ipynb  hourly_missing_ws_values_analysis_hourly.ipynb  returns_computing_test.ipynb
reports/: notes_cours.md
reports/figures/: france_stations_map.html  france_stations_map_missing_ws_percentage_6minute.html  france_stations_map_missing_ws_percentage_hourly.html
src/owtp/: config.py
src/owtp/exploration/: extract_missing_dates.py  mean_energy_computing.py  mean_wind_speed_computing.py  revenues_health_check.py  weather_preprocessing_health_check.py
src/owtp/method_tmp/: get_power.py
src/owtp/others/: returns_health_check.py  revenues_health_check.py  rolling.py
src/owtp/pipelines/: compute_portfolio_revenues.py  compute_portfolio_revenues_opt.py  convert_weather_nc.py  covariance_matrix_computing.py  covariance_matrix_pivot.py  covariance_matrix_text.py  energy_computing.py  era5_data_preprocessing.py  mean-variance.py  mean_energy_computing.py  mean_revenue_computing.py  mean_variance_optimization.py  mean_variance_optimization.py.backup  mean_wind_speed_computing.py  merge_elec_prices.py  random_portfolio_allocation.py  returns_computing.py  revenues_computing.py  weather_data_preprocessing.py  wind_height_adjustment.py
src/owtp/tests/: weather_preprocessing_health_check.py
src/owtp/visualisations/: stations_map.py  (+2 more)
(+15 files in other folders)
