[project]
name = "owtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
    "siphon>=0.10.0",
    "xarray>=2025.11.0",
    "h5netcdf>=1.7.3",
    "dask>=2025.11.0",
    "pyarrow>=22.0.0",
    "turbine-models>=0.2.1",
]

[tool.uv]
package = true
